--- a/src/PortfolioContainer/AboutMe/about.css
+++ b/src/PortfolioContainer/AboutMe/about.css
@@ -29,6 +29,11 @@
     font-size: 20px;
     font-weight: 600;
 }
+.aboutmeTextDiv p{
+    /* margin-top: 15%; */
+    font-size: 20px;
+    
+}
 .aboutmeTextDiv li{
     font-weight: normal;
 }
