added style to navbar

--- a/src/PortfolioContainer/Resume/resume.css
+++ b/src/PortfolioContainer/Resume/resume.css
@@ -113,7 +113,7 @@
         margin-bottom: -100px;
     }
     .mainDiv{
-        /* margin-top: -120px !important; */
+        margin-top: -120px !important;
     }
     .present{
         grid-gap: 2%;
