--- a/src/PortfolioContainer/Resume/resume.css
+++ b/src/PortfolioContainer/Resume/resume.css
@@ -9,7 +9,7 @@
     justify-content: space-around;
 }
 .skillDiv{
-    box-shadow: 0px 1px 2px 0px rgb(245, 106, 106);
+    box-shadow: 0px 1px 2px 0px rgb(200, 199, 199);
     padding: 30px 10px;
    
 }
@@ -112,9 +112,9 @@
     .educationQual{
         margin-bottom: -100px;
     }
-    .mainDiv{
+    /* .mainDiv{
         margin-top: -120px !important;
-    }
+    } */
     .present{
         grid-gap: 2%;
     }
@@ -124,6 +124,13 @@
     .skillcardMain{
         display: grid;
         grid-template-columns: 40% 40%;
+        gap: 20px;
     }
    
+}
+@media screen and (min-width:425px) {
+    .pageHeadings{
+        font-size: 40px;
+    }
+     
 }
