--- a/src/PortfolioContainer/Home/profile.css
+++ b/src/PortfolioContainer/Home/profile.css
@@ -200,10 +200,10 @@
         padding: 0px !important;
      }
 }
-@media screen and (max-width:375px) {
+@media screen and (max-width:450px) {
     .profile-picture{
-        height: 275px;
-        width: 275px;
+        height: 175px;
+        width: 175px;
     }
     .profile-details{
         width: 90%;
@@ -224,6 +224,9 @@
     }
     .typicalText{
         font-size: 20px;
+    }
+    .profile-role-tagline{
+        display: none;
     }
   
 }
